# telegram-notifier

./: .gitignore  Cargo.toml  README.md  README_rus.md  dist-workspace.toml  telegram-notifier.spec
.github/workflows/: release.yml
etc/telegram-notifier/: config.toml
src/: main.rs
wix/: main.wxs
