[package]
repository = "https://github.com/snevolin/telegram-notifier"
name = "telegram-notifier"
description = "CLI in Rust + teloxide for sending Telegram notifications and a \"listen\" mode that prints incoming messages."
authors = ["Stanislav Nevolin <stanislav@nevolin.info>"]
version = "0.0.1"
edition = "2024"

[package.metadata.wix]
upgrade-guid = "6BFEA4E0-295F-45DD-B317-6D02DEDF33AD"
path-guid = "48BEA483-982A-4895-A893-66363E86EEA2"
license = false
eula = false

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
dirs = "5"
serde = { version = "1", features = ["derive"] }
teloxide = { version = "0.12", features = ["macros", "ctrlc_handler"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
